@@ -34,8 +34,13 @@ public:
 	DCPTime full_length () const;
 
 	/* SubtitleContent */
-	bool has_subtitles () const {
+
+	bool has_text_subtitles () const {
 		return true;
+	}
+
+	bool has_image_subtitles () const {
+		return false;
 	}
 
 private:
